syntax = "proto3";

package proto.rpc;
import "consensus.proto";

enum RPCType {
    FastQuorumRequest = 0;
    DiverseQuorumRequest = 1;
    FastQuorumReply = 2;
    DiverseQuorumReply = 3;
}

message ProtoPayload {
    oneof message {
        proto.consensus.ProtoViewChange view_change = 1;
        proto.consensus.ProtoAppendEntries append_entries = 2;
        proto.consensus.ProtoNewLeader new_leader = 3;
        proto.consensus.ProtoNewLeaderOk new_leader_ok = 4;
        proto.consensus.ProtoVote vote = 5;       
    }

    RPCType rpc_type = 6;
    uint64 rpc_seq_num = 7;               // To be used for deduplication: (sender name, rpc_type, rpc_seq_no) is unique

}